plugins/scripting/scripting-tests/testData/diagnostics/repl/unsafe_cast_assignment_within_property_getter.repl.kts
// SNIPPET

var x: Int? = null
x = 1
val y: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x

val foo: String
    get() {
        x = null
        return ""
    }

val z: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x
